--- a/cv.html
+++ b/cv.html
@@ -183,24 +183,33 @@
                     <li>
                         Author of three academic papers detailing novel
                         techniques in geometric deep learning, graph machine
-                        learning, and uncertainty quantification.
+                        learning, and uncertainty quantification, all developed
+                        under tight deadlines and requiring strong research,
+                        writing, and project management skills.
                     </li>
                     <li>
                         Created the unfolded graph neural network (UGNN),
-                        implemented using PyTorch, showing significant
-                        improvements in accuracy and uncertainty quantification.
+                        implemented using Pytorch, which showed a significant
+                        improvement in accuracy against baseline models (up to
+                        91.5% vs 11.6%) and was able to quantify uncertainty in
+                        new regimes. This work was presented at ICLR 2025 and
+                        contributes to the wider field of explainable AI.
                     </li>
                     <li>
                         Initiated and led a University seminar series,
-                        organising 30 talks over three years.
+                        organising 30 talks over three years, bringing together
+                        colleagues to present work, discuss and collaborate.
                     </li>
                     <li>
-                        Guest lecturer for the master’s level Anomaly Detection
-                        course.
+                        Served as a guest lecturer for the master’s level
+                        Anomaly Detection course based on demonstrated expertise
+                        in the field.
                     </li>
                     <li>
                         Applied academic research in an industrial setting with
-                        LV= Insurance.
+                        LV= Insurance (Allianz Group), developing a custom
+                        exploratory data analysis tool for detecting and
+                        visualizing data drift.
                     </li>
                 </ul>
 
@@ -214,12 +223,14 @@
                 </h4>
                 <ul>
                     <li>
-                        Developed an automatic DJ system leveraging music
-                        information retrieval algorithms.
+                        Developed an automatic DJ system, leveraging seven music
+                        information retrieval (MIR) algorithms to decide track
+                        ordering and cross-fade points.
                     </li>
                     <li>
-                        Partnered with a production company to automate video
-                        editing processes.
+                        Partnered with a Manchester-based production company to
+                        partially automate the video editing process by
+                        suggesting edit points based on background music.
                     </li>
                     <li>
                         Entered with the Physics Entrance Scholarship for
@@ -250,15 +261,19 @@
                 <ul>
                     <li>
                         Developed a machine learning model to predict cerebral
-                        vasospasm in ICU patients, achieving an AUC of 0.77.
+                        vasospasm in ICU patients, achieving an AUC of 0.77,
+                        outperforming the previous baseline model (AUC ≈ 0.50).
                     </li>
                     <li>
-                        Implemented SQL and Python pipelines to clean and
-                        process hospital data.
+                        Implemented SQL and Python code to create pipelines to
+                        clean messy data from a hospital server, labelling and
+                        processing over 200 cases of vasospasm.
                     </li>
                     <li>
-                        Coordinated collaboration between doctors and university
-                        researchers.
+                        Coordinated collaboration under tight deadlines,
+                        facilitating communication between doctors and
+                        university researchers while quickly learning the
+                        condition’s medical background.
                     </li>
                 </ul>
 
@@ -269,12 +284,15 @@
                 </h4>
                 <ul>
                     <li>
-                        Co-authored a research document on network resilience
-                        with biological applications.
+                        Co-authored a research document on network resilience,
+                        focusing on biological applications, to support company
+                        knowledge development through collaboration with three
+                        other interns.
                     </li>
                     <li>
-                        Presented research findings to non-specialists using
-                        storytelling and data visualisation techniques.
+                        Presented research findings to non-specialists under
+                        tight deadlines, employing storytelling and data
+                        visualisation techniques to engage the audience.
                     </li>
                 </ul>
 
@@ -287,7 +305,9 @@
                 </h4>
                 <ul>
                     <li>
-                        Taught algorithmic thinking to undergraduate students.
+                        Taught algorithmic thinking to two classes of 12
+                        undergraduate students, and created learning experiences
+                        that build students’ interest in data science.
                     </li>
                 </ul>
 
@@ -298,8 +318,9 @@
                 </h4>
                 <ul>
                     <li>
-                        Provided hands-on instruction to help students build
-                        foundational Python knowledge.
+                        Provided hands-on instruction and support to help a
+                        class of 40 students reach a strong foundational
+                        knowledge of Python.
                     </li>
                 </ul>
             </section>
@@ -314,12 +335,19 @@
                 </h3>
                 <ul>
                     <li>
-                        Designed and implemented a PyTorch-based package for
-                        UGNN.
+                        Designed and implemented a PyTorch-based package for the
+                        Unfolded Graph Neural Network, translating the method
+                        from research into production-grade code.
                     </li>
                     <li>
-                        Integrated automated testing and CI/CD pipelines for
-                        robustness.
+                        Integrated automated testing (pytest) and continuous
+                        integration pipelines to ensure robustness and
+                        reproducibility.
+                    </li>
+                    <li>
+                        Self-managed the project using a Kanban workflow,
+                        including planning, testing, and maintaining a clear
+                        development history through Git version control.
                     </li>
                 </ul>
 
@@ -331,12 +359,19 @@
                 </h3>
                 <ul>
                     <li>
-                        Collaborated to develop pyemb, a Python package for
-                        exploratory data analysis of relational data.
+                        Collaborated as part of a team spanning the Universities
+                        of Bristol and Edinburgh to develop pyemb; a Python
+                        package containing tools for exploratory data analysis
+                        of relational data.
                     </li>
                     <li>
                         Implemented multi-layer network embedding algorithms,
                         speeding up initial implementations by up to 80x.
+                    </li>
+                    <li>
+                        Wrote tests (pytest) for functions across the codebase
+                        and used CI/CD (GitHub actions) to increase the
+                        reliability and accessibility of the codebase.
                     </li>
                 </ul>
 
@@ -344,8 +379,20 @@
                 <h3>LV= Data Hackathon: Modelling Air Pollution over Madrid</h3>
                 <ul>
                     <li>
-                        Won most innovative solution for representation learning
-                        to assign monitoring stations a position in space.
+                        Predicting air pollution levels at a given location in
+                        Madrid based on historical time-series data from 30
+                        weather stations.
+                    </li>
+                    <li>
+                        Won most innovative solution for the use of
+                        representation learning to assign each monitoring
+                        station a position in space based on climate
+                        similarities. This innovation boosted model performance
+                        and aided the explainability of output.
+                    </li>
+                    <li>
+                        Coordinated with a multidisciplinary team of 5 students
+                        in a fast-paced environment.
                     </li>
                 </ul>
 
@@ -357,8 +404,9 @@
                 </h3>
                 <ul>
                     <li>
-                        Award-winning data visualization showcasing a friendship
-                        network between countries based on alliances.
+                        Created an engaging visualisation of 40 alliances
+                        between 161 countries to tell the story of where
+                        countries lie on the world stage.
                     </li>
                     <li>
                         Runner-up in the Jean Golding Institute's
@@ -453,6 +501,13 @@
                         LinkedIn:
                         <a href="https://www.linkedin.com/in/edwarddavis941/"
                             >edwarddavis941</a
+                        >
+                    </li>
+                    <li>
+                        Google Scholar:
+                        <a
+                            href="https://scholar.google.com/citations?user=p8H8c5oAAAAJ&hl=en&oi=sra"
+                            >Ed Davis</a
                         >
                     </li>
                 </ul>
