added google scholar link

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
           <li>Email: edwarddavis[at]hotmail.co.uk, edward.davis[at]bristol.ac.uk</li>
           <li>GitHub: <a href="https://github.com/edwarddavis1">edwarddavis1</a></li>
           <li>LinkedIn: <a href="https://www.linkedin.com/in/edwarddavis941/">edwarddavis941</a></li>
+          <li>Google Scholar: <a
+                  href="https://scholar.google.com/citations?user=p8H8c5oAAAAJ&hl=en&oi=sra"
+                  >Ed Davis</a
+              >
+          </li>
           <li>PhD supervised by <a href="https://people.maths.bris.ac.uk/~pr12244/">Prof. Patrick Rubin-Delanchy</a> and
             <a href="https://people.maths.bris.ac.uk/~madjl/">Dr Daniel Lawson</a>.
           </li>
