--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <div>
       <h1 style="color: #fff;">Ed Davis</h1>
-      <img src="profile_pic.jpg" alt="Profile Picture" class="profile-picture" width="200">
+      <img src="new_pp_edit.jpg" alt="Profile Picture" class="profile-picture" width="200">
       <h2 style="color: #fff;">PhD, Computational Statistics and Data Science</h2>
       <h3 style="color: #fff;">University of Bristol</h3>
     </div>
