minor change to CV and shorter header

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <header>
     <div>
       <h1 style="color: #fff;">Ed Davis</h1>
-      <img src="Ed Davis_2.jpg" alt="Profile Picture" class="profile-picture" width="200">
+      <img src="IMG_3060.jpg" alt="Profile Picture" class="profile-picture" width="200">
       <h2 style="color: #fff;">PhD, Computational Statistics and Data Science</h2>
-      <h3 style="color: #fff;">University of Bristol</h3>
+      <!-- <h3 style="color: #fff;">University of Bristol</h3> -->
     </div>
   </header>
 
