--- a/cv.html
+++ b/cv.html
@@ -479,8 +479,8 @@
             <section class="section" id="interests">
                 <h2>Interests</h2>
                 <p>
-                    Climbing, board games, music production, gym, Mandarin (HSK
-                    1).
+                    Climbing, board games, music production, gym, Mandarin
+                    (approx HSK 1).
                 </p>
             </section>
 
