minor fixes, updated to d3 plots2

--- a/blog_page.html
+++ b/blog_page.html
@@ -27,7 +27,7 @@
         <p>What is a graph embedding anyway? Why is it useful?</p>
 
         <div class="network-embedding-container">
-        <iframe src="https://edwarddavis1.github.io/network_to_embedding_figure/index.html" width="100%"frameborder="0"></iframe>
+        <iframe src="https://edwarddavis1.github.io/network_to_embedding_figure/index.html" width="100%" height="600px" frameborder="0" data-iframe-resize="true" style="min-height: 500px;"></iframe>
         </div> -->
 
         <article>
