--- a/cv.html
+++ b/cv.html
@@ -209,7 +209,7 @@
                         Applied academic research in an industrial setting with
                         LV= Insurance (Allianz Group), developing a custom
                         exploratory data analysis tool for detecting and
-                        visualizing data drift.
+                        visualising data drift.
                     </li>
                 </ul>
 
@@ -399,7 +399,7 @@
                 <span class="date">(06/2022)</span>
                 <h3>
                     <a href="world_stage.jpg" target="_blank"
-                        >World Stage Visualization</a
+                        >World Stage Visualisation</a
                     >
                 </h3>
                 <ul>
