--- a/figures/network_to_embedding/figure_index.html
+++ b/figures/network_to_embedding/figure_index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>D3</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="style.css" />
         <script src="https://d3js.org/d3.v6.min.js"></script>
         <style src="style.css"></style>
