--- a/the_importance_of_stability.html
+++ b/the_importance_of_stability.html
@@ -110,7 +110,7 @@ References
 
 [3] I. Gallagher, A. Jones, and P. Rubin-Delanchy, “Spectralembedding for dynamic networks with stability guarantees,”arXiv preprint arXiv:2106.01282, 2021.
 
-[4] Ryan A. Rossi and Nesreen K. Ahmed, "The Network Data Repository with Interactive Graph Analytics and Visualization", https://networkrepository.com/ia-primary-school-proximity-attr.php, 2015.
+[4] Ryan A. Rossi and Nesreen K. Ahmed, "The Network Data Repository with Interactive Graph Analytics and Visualisation", https://networkrepository.com/ia-primary-school-proximity-attr.php, 2015.
 </p>
         </main>
 
