--- a/blogs/intro_to_graph_embedding/intro_to_graph_embedding.html
+++ b/blogs/intro_to_graph_embedding/intro_to_graph_embedding.html
@@ -57,7 +57,7 @@
 
       
         <!-- <div class="network-embedding-container">
-        <iframe src="https://edwarddavis1.github.io/network_to_embedding_figure/index.html" width="100%"frameborder="0"></iframe>
+        <iframe src="https://edwarddavis1.github.io/network_to_embedding_figure/index.html" width="100%" height="600px" frameborder="0" data-iframe-resize="true" style="min-height: 500px;"></iframe>
         </div> -->
 
 
