--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     
   <!-- Modern CSS -->
-  <link rel="stylesheet" href="modern.css">
+  <link rel="stylesheet" href="css/modern.css">
   
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="hero-content">
         <div class="profile-container">
-          <img src="new_pp_edit.jpg" alt="Ed Davis" class="profile-picture" data-aos="fade-in">
+          <img src="assets/images/pp.jpg" alt="Ed Davis" class="profile-picture" data-aos="fade-in">
           <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Ed Davis</h1>
           <h2 class="hero-subtitle" data-aos="fade-up" data-aos-delay="400">PhD, Computational Statistics and Data Science</h2>
           <p class="mb-4" data-aos="fade-up" data-aos-delay="600"><span class="typed-text"></span></p>
@@ -182,7 +182,7 @@
               these cases and demonstrate the empirical validity, as well as the performance gains, of unfolded GNNs against
               standard GNN architectures on both simulated and real datasets.
             </p>
-            <img src="iid_sbm_ugcn_block_gcn_trans.png" alt="A dynamic embedding of i.i.d. data using UGCN and a standard GCN." 
+            <img src="assets/images/iid_sbm_ugcn_block_gcn_trans.png" alt="A dynamic embedding of i.i.d. data using UGCN and a standard GCN." 
                  class="images" data-aos="fade-up" />
             <figcaption><strong>Figure:</strong> UGCN and block diagonal GCN representations of an i.i.d. stochastic block
               model after applying PCA. The models were trained with transductive masks. Block diagonal GCN appears to
@@ -210,7 +210,7 @@
               <i>unfolded</i> methods will produce stable embeddings over time and space, meaning that nodes with
               identical latent behaviour will be exchangeable, regardless of their position in time or space.
             </p>
-            <img src="europe_and_uk_italy_URLSE.jpg" alt="1D Embedding of Flight Network" class="images" data-aos="fade-up" />
+            <img src="assets/images/europe_and_uk_italy_URLSE.jpg" alt="1D Embedding of Flight Network" class="images" data-aos="fade-up" />
             <figcaption><strong>Figure:</strong> A one-dimensional URLSE displaying the average temporal structure of
               airports in Italy, the UK and across Europe. The embedding encodes the two main European waves of COVID-19 as
               well as an annual periodic structure before and after the pandemic. We also see that the pandemic hit Italy
@@ -239,7 +239,7 @@
               data visualisation method t-SNE, where uncertainty estimates from bootstrapping are used to explain whether
               visible structures represent real statistically sound structures.
             </p>
-            <img src="bootstrap_paper_img.png" alt="Our network bootstrapping procedure" class="images" data-aos="fade-up" />
+            <img src="assets/images/bootstrap_paper_img.png" alt="Our network bootstrapping procedure" class="images" data-aos="fade-up" />
             <figcaption><strong>Figure:</strong> An overview of the proposed graph bootstrap framework. Given an adjacency
               matrix (a), we use its network embedding (b) to estimate the probability matrix (c) using k-nearest
               neighbours, from which the adjacency matrix was drawn. From this, we draw many new adjacency matrices (d) and
@@ -263,7 +263,7 @@
         <div class="project-card" data-aos="fade-up">
           <div class="project-content">
             <div class="d-flex align-items-center mb-4">
-              <img src="ugnn_logo.png" alt="UGNN logo" class="project-logo mr-3">
+              <img src="assets/images/ugnn_logo.png" alt="UGNN logo" class="project-logo mr-3">
               <h3 class="project-title mb-0">
                 <a href="https://github.com/edwarddavis1/ugnn" target="_blank">UGNN - The Unfolded Graph Neural Networks package</a>
               </h3>
@@ -327,7 +327,7 @@ Node 3704 (True label 2B): ['1A', '2A', '2B', '3A']</code></pre>
         <div class="project-card" data-aos="fade-up" data-aos-delay="100">
           <div class="project-content">
             <div class="d-flex align-items-center mb-4">
-              <img src="pyemb_logo.png" alt="pyemb logo" class="project-logo mr-3">
+              <img src="assets/images/pyemb_logo.png" alt="pyemb logo" class="project-logo mr-3">
               <h3 class="project-title mb-0">
                 <a href="https://github.com/pyemb/pyemb" target="_blank">pyemb - EDA of embeddings in Python</a>
               </h3>
@@ -380,8 +380,8 @@ fig = eb.quick_plot(URLSE_emb, n, T, node_labels)</code></pre>
               based on their alliances.
             </p>
             <div class="text-center">
-              <a href="world_stage.jpg" target="_blank" class="d-inline-block" data-aos="fade-up">
-                <img src="world_stage.jpg" alt="World Stage Data Visualisation" class="images" style="max-width: 100%; margin: 0 auto;">
+              <a href="assets/images/world_stage.jpg" target="_blank" class="d-inline-block" data-aos="fade-up">
+                <img src="assets/images/world_stage.jpg" alt="World Stage Data Visualisation" class="images" style="max-width: 100%; margin: 0 auto;">
               </a>
               <p><em>(Click image for full-size)</em></p>
             </div>
