--- a/blog_page.html
+++ b/blog_page.html
@@ -4,15 +4,22 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Ed Davis</title>
-        <link rel="stylesheet" href="new_style.css" />
+        <link rel="stylesheet" href="css/modern.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+              integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+              crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
 <header>
   <nav>
-    <div class="menu">
-      <button onclick="location.href='index.html'">Home</button>
-      <button onclick="location.href='cv.html'">CV</button>
-      <button onclick="location.href='#blog'">Blog</button>
+    <a href="index.html" class="logo">Ed Davis</a> 
+    <button class="mobile-menu-toggle">
+      <i class="fas fa-bars"></i>
+    </button>
+    <div class="nav-menu"> 
+      <a href="index.html" class="nav-link">Home</a>
+      <a href="cv.html" class="nav-link">CV</a>
+      <a href="#blog" class="nav-link active">Blog</a>
     </div>
   </nav>
 </header>
