added Dr title and changed the subtitle

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       <div class="hero-content">
         <div class="profile-container">
           <img src="assets/images/pp.jpg" alt="Ed Davis" class="profile-picture" data-aos="fade-in">
-          <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Ed Davis</h1>
-          <h2 class="hero-subtitle" data-aos="fade-up" data-aos-delay="400">PhD, Computational Statistics and Data Science</h2>
+          <h1 class="hero-title" data-aos="fade-up" data-aos-delay="200">Dr Ed Davis</h1>
+          <h2 class="hero-subtitle" data-aos="fade-up" data-aos-delay="400">PhD, Geometric Deep Learning and Graph ML</h2>
           <p class="mb-4" data-aos="fade-up" data-aos-delay="600"><span class="typed-text"></span></p>
         </div>
       </div>
