fixed problem where I wasn't getting a space after an anchor element

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <li><i class="fab fa-github"></i> GitHub: <a href="https://github.com/edwarddavis1" target="_blank">edwarddavis1</a></li>
             <li><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/edwarddavis941/" target="_blank">edwarddavis941</a></li>
             <li><i class="fas fa-graduation-cap"></i> Google Scholar: <a href="https://scholar.google.com/citations?user=p8H8c5oAAAAJ&hl=en&oi=sra" target="_blank">Ed Davis</a></li>
-            <li><i class="fas fa-university"></i> PhD supervised by <a href="https://people.maths.bris.ac.uk/~pr12244/" target="_blank">Prof. Patrick Rubin-Delanchy</a> and <a href="https://people.maths.bris.ac.uk/~madjl/" target="_blank">Dr Daniel Lawson</a></li>
+            <li><i class="fas fa-university"></i> PhD supervised by <a href="https://people.maths.bris.ac.uk/~pr12244/" target="_blank">Prof. Patrick Rubin-Delanchy</a>&nbsp;and <a href="https://people.maths.bris.ac.uk/~madjl/" target="_blank">Dr Daniel Lawson</a></li>
           </ul>
         </div>
       </div>
