ignores all work-in-progress blogs

--- a/cv.html
+++ b/cv.html
@@ -73,14 +73,13 @@
             .cv-header-content {
                 position: relative;
                 z-index: 1;
-            }
-
-            .cv-name {
+            }            .cv-name {
                 font-family: 'Space Grotesk', sans-serif;
                 font-size: 3rem;
                 font-weight: 700;
                 margin-bottom: 0.5rem;
                 letter-spacing: -0.02em;
+                color: white;
             }
 
             .cv-title {
