removed CV page from website

--- a/blogs/importance_of_stability_in_dynamic_embeddings/importance_of_stability_blog.html
+++ b/blogs/importance_of_stability_in_dynamic_embeddings/importance_of_stability_blog.html
@@ -339,13 +339,11 @@
             <nav class="blog-nav">
                 <a href="../../index.html" class="logo">
                     <i class="fas fa-arrow-left"></i> Ed Davis
-                </a>
-                <div class="nav-links">
+                </a>                <div class="nav-links">
                     <a href="../../index.html#about">Research</a>
                     <a href="../../index.html#papers">Papers</a>
                     <a href="../../index.html#projects">Projects</a>
                     <a href="../../blog_page.html">Blog</a>
-                    <a href="../../cv.html">CV</a>
                 </div>
             </nav>
             <div class="breadcrumb">
