minor change to blog

--- a/blogs/importance_of_stability_in_dynamic_embeddings/importance_of_stability_blog.html
+++ b/blogs/importance_of_stability_in_dynamic_embeddings/importance_of_stability_blog.html
@@ -355,8 +355,7 @@
         
         <div class="container">
             <h1>
-                Student Perspectives: The Importance of Stability in Dynamic
-                Network Analysis
+                The Importance of Stability in Dynamic Network Embedding
             </h1>
 
             <div class="original-post-box">
